- Add demo Native Ad in the content list - Add AppLovin Discovery MREC with the placement position in the Native Ad sections

--- a/demo/src/main/res/layout/activity_second.xml
+++ b/demo/src/main/res/layout/activity_second.xml
@@ -13,22 +13,16 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:titleTextColor="@android:color/white" />
 
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/bannerAdView"
         android:layout_below="@+id/toolbar"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="This is second activity" />
-
-    </LinearLayout>
+        android:scrollbars="none" />
 
     <com.solodroid.ads.sdk.ui.BannerAdView
+        android:id="@+id/bannerAdView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" />
