--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/native_ad_view"
+            android:id="@+id/native_ad"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
